--- a/blog/src/components/Card/style.css
+++ b/blog/src/components/Card/style.css
@@ -8,8 +8,20 @@
 .link-sem-alteracao {
     pointer-events: none;
 }
-  
+
 .botao-com-alteracao {
     pointer-events: auto;
 }
-  
+
+
+.link {
+    text-decoration: none;
+    /* Remove a sublinhado padrão */
+    color: black;
+    /* Define a cor do texto */
+}
+
+.link:hover {
+    text-decoration: none;
+    /* Remove a sublinhado */
+}
