--- a/blog/src/components/Card/style.css
+++ b/blog/src/components/Card/style.css
@@ -16,12 +16,15 @@
 
 .link {
     text-decoration: none;
-    /* Remove a sublinhado padrão */
     color: black;
-    /* Define a cor do texto */
 }
 
 .link:hover {
     text-decoration: none;
-    /* Remove a sublinhado */
+}
+
+.image {
+    width: 100%;
+    height: 100px;
+    object-fit: cover;
 }
